# calib_AXXB

./: CMakeLists.txt  readme
config/: calib.yaml
data/: gps.txt  lidar.txt
include/: hand_eye_calibrator.h
src/: hand_eye_calibrator.cpp
